<?xml version="1.0" encoding="utf-8"?>
<com.qhutch.bottomsheetlayout.BottomSheetLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="140dp"
    android:background="@drawable/shape_top_radius"
    app:collapsedHeight="120dp"
    style="@style/Animation.Design.BottomSheetDialog"
    android:elevation="3dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <View
            android:id="@+id/top_line"
            android:layout_width="40dp"
            android:layout_height="1.5dp"
            android:background="#E5E5E5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <LinearLayout
            android:id="@+id/menu_linear1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:weightSum="4"
            app:layout_constraintTop_toBottomOf="@+id/top_line">

            <TextView
                android:id="@+id/main_info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:drawableTopCompat="@drawable/ic_infosigap"
                android:drawablePadding="6dp"
                android:gravity="center"
                android:text="@string/info_sigap_title"
                android:textColor="@color/black"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/main_sakpole"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_weight="1"
                app:drawableTopCompat="@drawable/ic_sakpole"
                android:drawablePadding="6dp"
                android:gravity="center"
                android:text="@string/sakpole_title"
                android:textColor="@color/black"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/main_barbuk"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_weight="1"
                app:drawableTopCompat="@drawable/ic_barbuk"
                android:drawablePadding="6dp"
                android:gravity="center"
                android:text="@string/barbuk_title"
                android:textColor="@color/black"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/main_delivery"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_weight="1"
                app:drawableTopCompat="@drawable/ic_delivery"
                android:drawablePadding="6dp"
                android:gravity="center"
                android:text="@string/delivery_title"
                android:textColor="@color/black"
                android:textSize="14sp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/main_title_menus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/nunito_semibold"
            android:text="@string/app_name"
            android:textSize="16sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/menu_linear1"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/main_title_menus">

            <TextView
                android:id="@+id/sakpole_bayar_pajak"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/shape_rectangle_menu_white_medium"
                android:padding="10dp"
                android:fontFamily="@font/nunito_semibold"
                android:textSize="14sp"
                android:text="@string/bayar_pajak_title"
                android:elevation="3dp"
                android:textColor="@color/black"
                android:gravity="start|center"
                android:drawablePadding="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:drawableStartCompat="@drawable/ic_account_balance_wallet" />

            <TextView
                android:id="@+id/sakpole_cek_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/shape_rectangle_menu_white_medium"
                android:padding="10dp"
                android:fontFamily="@font/nunito_semibold"
                android:textSize="14sp"
                android:text="@string/cek_status_valid_title"
                android:elevation="3dp"
                android:textColor="@color/black"
                android:gravity="start|center"
                android:drawablePadding="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toBottomOf="@+id/sakpole_bayar_pajak"
                app:drawableStartCompat="@drawable/ic_description" />

            <TextView
                android:id="@+id/sakpole_lupa_kode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/shape_rectangle_menu_white_medium"
                android:padding="10dp"
                android:fontFamily="@font/nunito_semibold"
                android:textSize="14sp"
                android:text="@string/lupa_kode_bayar_title"
                android:elevation="3dp"
                android:textColor="@color/black"
                android:gravity="start|center"
                android:drawablePadding="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toBottomOf="@+id/sakpole_cek_status"
                app:drawableStartCompat="@drawable/ic_lock_bold" />

            <TextView
                android:id="@+id/sakpole_ganti_cara_bayar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/shape_rectangle_menu_white_medium"
                android:padding="10dp"
                android:fontFamily="@font/nunito_semibold"
                android:textSize="14sp"
                android:text="@string/ganti_cara_bayar_title"
                android:elevation="3dp"
                android:textColor="@color/black"
                android:gravity="start|center"
                android:drawablePadding="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toBottomOf="@+id/sakpole_lupa_kode"
                app:drawableStartCompat="@drawable/ic_sync" />

            <TextView
                android:id="@+id/sakpole_status_bayar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/shape_rectangle_menu_white_medium"
                android:padding="10dp"
                android:fontFamily="@font/nunito_semibold"
                android:textSize="14sp"
                android:text="@string/status_bayar_title"
                android:elevation="3dp"
                android:textColor="@color/black"
                android:gravity="start|center"
                android:drawablePadding="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toBottomOf="@+id/sakpole_ganti_cara_bayar"
                app:drawableStartCompat="@drawable/ic_pending_actions" />

            <TextView
                android:id="@+id/sakpole_unduh_etbpkp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/shape_rectangle_menu_white_medium"
                android:padding="10dp"
                android:fontFamily="@font/nunito_semibold"
                android:textSize="14sp"
                android:text="@string/unduh_etbpkp_title"
                android:elevation="3dp"
                android:textColor="@color/black"
                android:gravity="start|center"
                android:drawablePadding="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toBottomOf="@+id/sakpole_status_bayar"
                app:drawableStartCompat="@drawable/ic_assignment_returned" />

            <TextView
                android:id="@+id/sakpole_epengesahan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/shape_rectangle_menu_white_medium"
                android:padding="10dp"
                android:fontFamily="@font/nunito_semibold"
                android:textSize="14sp"
                android:text="@string/epengesahan_title"
                android:elevation="3dp"
                android:textColor="@color/black"
                android:gravity="start|center"
                android:drawablePadding="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sakpole_unduh_etbpkp"
                app:drawableStartCompat="@drawable/ic_file_copy" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</com.qhutch.bottomsheetlayout.BottomSheetLayout>